# faction-wars

./: README.md  mydatabase.db  pyproject.toml  test.py  test_models.py
faction_wars/database_interface/: base_models.py  data_access.py  models.py
faction_wars/event_loop/: event_queue.py  game_loop.py
faction_wars/events/: event_result.py  pending_event.py
faction_wars/races/: race_enum.py
faction_wars/resources/: resources.py
faction_wars/troops/: unit_stance.py  units.py
